--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   # Supabase dependencies
   supabase_flutter: ^2.3.4
   http: ^1.1.2
+  flutter_typeahead: ^4.3.7
+  connectivity_plus: ^6.0.5
 
 dev_dependencies:
   flutter_test:
